在　TLAB 上分配对象。